bootstrap and receipt change

--- a/app/views/welcome/receipt.html.erb
+++ b/app/views/welcome/receipt.html.erb
@@ -1,3 +1,8 @@
 <%= @auth_num %> <br>
 <%= @ctr %> <br>
 <%= @merchant_name %> <br>
+
+<h2><%= @merchant_name %></h2>
+Thank you for buying these ridiculous products! <br>
+
+<%= debug @more_params %>
