--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+<header>
+  <div class="container">
+    <h1> Welcome to my ECommerce Site </h1>
+  </div>
+</header>
+
 <%= yield %>
 
 </body>
